Add basic HTML structure, and CSS to reset styling

--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@layer base {
+    body, main, * {
+        padding: 0;
+        border: 0;
+        margin: 0;
+        font-family: "Poppins", sans-serif;
+    }
+}
