--- a/src/input.css
+++ b/src/input.css
@@ -19,11 +19,6 @@
         @apply w-full p-3 bg-yellow-200 text-center text-red-700 font-extrabold text-2xl cursor-copy;
     }
 
-    form .range-input {
-        @apply appearance-none cursor-grab mt-2 w-42 max-w-42;
-        transition: all 0.3s ease-in-out;
-    }
-
     form .range-input:hover {
         @apply scale-110;
     }
@@ -53,5 +48,9 @@
         display: flex;
         flex-direction: column;
         align-items: center; 
+    }
+
+    .smooth-transition {
+        transition: all 0.3s ease-in-out;
     }
 }
