Fix the position of range-input element's slider-thumb on viewport ranging 600-800 pixels.

--- a/src/input.css
+++ b/src/input.css
@@ -91,6 +91,12 @@
     main {
         height: 45%;
     }
+
+    form .range-input { 
+        &::-webkit-slider-thumb {
+            @apply mt-[-6px];
+        }
+    }
 }
 
 @media (max-width: 700px) {
@@ -100,6 +106,12 @@
 
     main {
         height: 40%;
+    }
+
+    form .range-input { 
+        &::-webkit-slider-thumb {
+            @apply mt-[-5.5px];
+        }
     }
 }
 
