--- a/src/input.css
+++ b/src/input.css
@@ -14,8 +14,7 @@
     }
     
     main {
-        height: 600px;
-        max-height: 600px;
+        height: 37.5rem;
         background: linear-gradient(178.63deg, var(--color-primary), rgba(230, 191, 92, 0) 140.92%);
     }
 }
@@ -91,7 +90,7 @@
     }
 
     main {
-        height: 45%;
+        max-height: 35rem;
     }
 
     form .range-input { 
@@ -107,7 +106,7 @@
     }
 
     main {
-        height: 40%;
+        max-height: 32.5rem;
     }
 
     form .range-input { 
@@ -119,6 +118,7 @@
 
 @media (max-width: 600px) {
             main {
+                max-height: 30rem;
                 padding: 1.8rem;
                 gap: 1rem;
             }
@@ -150,7 +150,7 @@
     
 @media (max-width: 470px) {
             main {
-                height: 35%;
+                height: 27.5rem;
             }
     
             h1 {
